# double-pendulum-openGL

./: CMakeLists.txt  CUDA_GUIDE.md  IMPLEMENTATION.md  README.md  build.sh  imgui.ini  test.sh
.github/: copilot-instructions.md
config/: default.json
include/: Application.h  ChaosAnalysis.h  CudaChaosAnalysis.h  CudaPhysicsEngine.h  CudaPhysicsSolver.h  CudaTrailRenderer.h  LagrangianSolver.h  PendulumState.h  Rendering.h  TrailRenderer.h  UI.h
shaders/: basic.frag  basic.vert
specs/001-build-an-opengl/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-an-opengl/contracts/: physics-interface.md  rendering-interface.md  ui-interface.md
src/: cuda_demo.cpp  main.cpp
src/analysis/: ChaosAnalyzer.cpp
src/core/: Application.cpp
src/physics/: LagrangianSolver.cpp  PendulumState.cpp
src/physics/cuda/: CudaPhysicsEngine.cpp  CudaPhysicsSolver.cu  KernelLauncher.cpp  pendulum_kernels.cu
src/rendering/: Camera.cpp  Primitives.cpp  Shader.cpp  TextRenderer.cpp  TrailRenderer.cpp
src/rendering/cuda/: CudaTrailRenderer.cu
src/ui/: ImGuiWrapper.cpp  UIManager.cpp
